public abstract class AppAnimationVariables {

	//player animations "small Mario"
	public const string ANIM_SMALL_TO_BIG = "changingState";

	//player animation "small Mario" variables
	public const string IS_WALKING = "walking";
	public const string IS_JUMPING = "jumping";
	public const string IS_DEAD = "hasDied";
	public const string IS_CHANGING_STATE = "changingState";

	//block animation variables
	public const string NOT_HITTABLE = "wasHitted";
}
